Remove ignored files from repository

--- a/lab5/clustering_topic_modeling.ipynb
+++ b/lab5/clustering_topic_modeling.ipynb
@@ -40,9 +40,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✓ All imports successful!\n"
+          ]
+        }
+      ],
       "source": [
         "# Install required packages if not already installed\n",
         "# Uncomment the following lines if needed:\n",
@@ -73,9 +81,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading 20 Newsgroups dataset...\n",
+            "✓ Loaded 2204 documents\n",
+            "Categories: ['comp.graphics', 'rec.sport.baseball', 'sci.space', 'talk.politics.mideast']\n",
+            "\n",
+            "Sample document (first 200 chars):\n",
+            "Apparently, my editor didn't do what I wanted it to do, so I'll try again.\n",
+            "\n",
+            "i'm looking for any programs or code to do simple animation and/or\n",
+            "drawing using fractals in TurboPascal for an IBM\n",
+            "        ...\n"
+          ]
+        }
+      ],
       "source": [
         "# Load a subset of 20 Newsgroups dataset\n",
         "# We'll use 4 categories for demonstration\n",
@@ -124,9 +149,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SentenceTransformers not installed.\n",
+            "Install with: pip install sentence-transformers\n",
+            "\n",
+            "Using TF-IDF as fallback...\n",
+            "✓ Generated TF-IDF + SVD embeddings: (2204, 50)\n"
+          ]
+        }
+      ],
       "source": [
         "try:\n",
         "    from sentence_transformers import SentenceTransformer\n",
@@ -172,7 +209,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "try:\n",
         "    import umap\n",
@@ -326,11 +372,6 @@
         "    plt.colorbar(label='Cluster')\n",
         "    plt.show()\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -516,8 +557,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.6"
     }
   },
   "nbformat": 4,
