--- a/lab4/transformer_classification.ipynb
+++ b/lab4/transformer_classification.ipynb
@@ -53,9 +53,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from datasets import list_datasets\n",
+        "from huggingface_hub import list_datasets \n",
         "\n",
-        "all_datasets = list_datasets()\n",
+        "all_datasets = list(list_datasets())\n",
         "print(f\"There are {len(all_datasets)} datasets currently available on the Hub\")\n",
         "print(f\"The first 10 are: {all_datasets[:10]}\")"
       ]
